# vec-string-to-static-str

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
